[FEATURE] Added Storage Policy output for disks and VM files located on vSAN datastores

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,4 @@
-include AUTHORS.rst
-include CONTRIBUTING.rst
-include HISTORY.rst
+include AUTHORS.md
 include LICENSE
-include README.rst
+include README.md
+include requirements.txt
